# Rust-Calculator

./: Cargo.toml  README.md  calc.rs  main.rs
src/: calc_win.glade  main.rs  main_console.rs  stack.rs
